# photo_backup

./: .gitignore  README.md  app.py  check_exif.py  configuration.yaml  media.db  myphoto.db  pyproject.toml  requirements.txt  setup_database.py
config/: __init__.py
core/: database.py  logger.py  photo_processor.py  utils.py  video_processor.py
photoarc/: __init__.py  __main__.py
photoarc/config/: __init__.py
photoarc/core/: database.py  logger.py  photo_processor.py  utils.py  video_processor.py
