[project]
name = "photo-backup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=8.0.0",
    "pyyaml>=5.4.0",
    "uuid>=1.30",
]

[tool.basedpyright]
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnannotatedClassAttribute = false
reportAny = false
reportUnusedCallResult = false

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
]
